[gd_scene load_steps=2 format=3 uid="uid://bj5a8wkx8nqtl"]

[ext_resource type="Script" path="res://ui/multiplayer_lobby.gd" id="1_5qmwi"]

[node name="MultiplayerLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5qmwi")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Multiplayer Lobby"
horizontal_alignment = 1

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Your IP: 192.168.1.100"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Players:"
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
theme_override_font_sizes/font_size = 24
max_text_lines = 2
auto_height = false

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 1, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "Waiting for players..."
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Difficulty"
horizontal_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="EasyButton" type="Button" parent="VBoxContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Easy"
toggle_mode = true

[node name="MediumButton" type="Button" parent="VBoxContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Medium"
toggle_mode = true
button_pressed = true

[node name="HardButton" type="Button" parent="VBoxContainer/DifficultyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Hard"
toggle_mode = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Start Game"
disabled = true

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Back to Menu"